--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <h3>お問い合わせ・ご注文</h3>
   <p>メールまたはInstagramのDMで受け付けています。</p>
   <ul>
-    <li>Email: lego@example.com</li>
-    <li>Instagram: <a href="#">@lego_parts_shop</a></li>
+    <li>Email: 作成中</li>
+    <li>Instagram: <a href="#">作成中</a></li>
   </ul>
 </section>
 
